Add Gpio access to runtime and a C demo application

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,12 @@ description = "A demonstration of executing WebAssembly on an ESP32-C3 RISC-V MC
 repository = "https://github.com/1c3t3a/wasm-on-esp32c3.git"
 license = "MIT"
 
-[features]
-native = ["esp-idf-sys/native"]
-
 [dependencies]
-esp-idf-sys = { version = "0.25", features = ["binstart"] }
+esp-idf-sys = { version = "0.27", features = ["binstart"] }
 wasmi = { version = "0.9.1", default-features = false, features = ["core", "reduced-stack-buffer"] }
-esp-idf-hal = "0.25.0"
+esp-idf-hal = "0.27.0"
+embedded-hal = { version = "0.2", features = ["unproven"] }
+log = { version = "0.4", default-features = false }
 
 [build-dependencies]
 embuild = "0.24.5"
