--- a/application-rs/Cargo.toml
+++ b/application-rs/Cargo.toml
@@ -15,7 +15,7 @@ panic           = "abort"
 debug           = true
 incremental     = false
 codegen-units   = 1
-opt-level       = 's'
+opt-level       = 'z'
 
 [dependencies]
 embedded-hal = { version = "0.2.6", features = ["unproven"] }
